--- a/config.json
+++ b/config.json
@@ -1,4 +1,5 @@
 {
+    "bot_token": "bot token here",
     "upload_channel": "put channel id here",
     "game_name": "put game name here",
     "game_description": "put game description here",
